Update profil and language

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -70,7 +70,7 @@
         "other_city": "Other city",
         "your_neighborhood": "Your neighbourhood",
         "change_avatar": "Change my avatar",
-        "home_title": "The Grand \"Mützig\" Music Challenge",
+        "home_title": "Music Challenge",
         "edit_profile_player": "Change your player name",
         "rang": "Rank",
         "point": "Points",
